Implement major UI overhaul

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,164 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", serif;
+  color: #f5edf0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #171c28;
+}
+
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #2f3748;
+}
+
+.navbar h1 {
+  color: #ff2fc4;
+}
+
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+  color: #f5edf0;
+  transition: color 0.3s ease;
+}
+
+.navbar a:hover {
+  color: #ff2fc4;
+}
+
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #222733;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+/* blog previews / list */
+.blog-preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #2f3748;
+  transition: box-shadow 0.3s ease;
+}
+
+.blog-preview:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.blog-preview h2 {
+  font-size: 20px;
+  color: #ff2fc4;
+  margin-bottom: 8px;
+}
+
+.blog-preview a {
+  text-decoration: none;
+}
+
+/* blog details page */
+.blog-details h2 {
+  font-size: 20px;
+  color: #ff2fc4;
+  margin-bottom: 10px;
+}
+
+.blog-details div {
+  margin: 20px 0;
+  color: #f5edf0;
+}
+
+.blog-details button {
+  background: #ff2fc4;
+  color: #f5edf0;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* create new blog form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  color: #f5edf0;
+}
+
+.create label {
+  text-align: left;
+  display: block;
+}
+
+.create h2 {
+  font-size: 20px;
+  color: #ff2fc4;
+  margin-bottom: 30px;
+}
+
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #2f3748;
+  box-sizing: border-box;
+  display: block;
+  color: #f5edf0;
+  background-color: #222733;
+}
+
+.create button {
+  background: #ff2fc4;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* not found page*/
+.not-found {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  color: #f5edf0;
+}
+
+.not-found h2 {
+  font-size: 20px;
+  color: #ff2fc4;
+  border-bottom: 1px solid #2f3748;
+  padding-bottom: 20px;
+}
+
+.not-found p {
+  color: #f5edf0;
+  margin: 20px 0;
+}
+
+.not-found a {
+  color: #f5edf0;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.not-found a:hover {
+  color: #ff2fc4;
 }
